# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

[kernel_module(
    name = "lwis.{}".format(kernel_build),
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/soc/gs:{}".format(soc_headers),
    ],
    outs = [
        "lwis.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:{}".format(kernel_build),
    kernel_module_deps = [
        "//private/google-modules/soc/gs:{}".format(soc),
    ],
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
) for kernel_build, soc, soc_headers in [
    ("slider", "gs101_soc", "gs101_soc_headers"),
    ("zuma_emulator", "zuma_soc_emulator", "soc_headers"),
    ("zuma_hybrid", "zuma_soc_hybrid", "soc_headers"),
]]
